# Practica3_MSR

./: README.md
Practica3_MartinAntonioNovo/: CMakeLists.txt  enlace_github.txt  package.xml
Practica3_MartinAntonioNovo/config/: rover_bridge.yaml  rover_controllers.yaml
Practica3_MartinAntonioNovo/launch/: controller.launch.py  gazebo_robot.launch.py
Practica3_MartinAntonioNovo/meshes/dae/: Cube.001.dae  Cube.005.dae  Cube.007.dae  Cube.010.dae  Cube.015.dae  Cube.016.dae  Cube.145.dae  Cylinder.005.dae  Cylinder.010.dae  Cylinder.011.dae  Cylinder.dae
Practica3_MartinAntonioNovo/rviz/: robot.rviz
Practica3_MartinAntonioNovo/urdf/: ros2_control.urdf.xacro
Practica3_MartinAntonioNovo/urdf/arm/: arm.urdf.xacro
Practica3_MartinAntonioNovo/urdf/base/: robot_base.urdf.xacro
Practica3_MartinAntonioNovo/urdf/sensors/: imu.urdf.xacro
Practica3_MartinAntonioNovo/urdf/utils/: materials.xacro
Robot_Rover_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
Robot_Rover_moveit_config/config/: Robot_Rover.ros2_control.xacro  Robot_Rover.srdf  Robot_Rover.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
Robot_Rover_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
launch/: rviz_basico.launch.py
meshes/dae/: Cube.004.dae  Cube.008.dae  Cube.014.dae  Cube.017.dae  Cylinder.001.dae  Cylinder.002.dae  (+6 more)
robots/: robot.urdf.xacro
(+3 files in other folders)
